# llm-app

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md
.maestro/: README.md  config.yaml
.maestro/flows/: chat-fallback.yaml  chat-layout.yaml  smoke.yaml  tab-walk.yaml  works-clean.yaml
android/: gradle.properties
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/vlogcopilot/: AiEditRouter.kt  (+12 more)
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/values-zh-rCN/: strings.xml
android/app/src/main/res/xml/: file_paths.xml
android/gradle/: gradle-daemon-jvm.properties  libs.versions.toml
docs/: vlogcopilot-ui-optimization-plan.md  vlogpilot-ui-optimization-plan.md  上游差异与未来清理.md  参考链接.md  快速开始.md  架构详解.md  测试.md  用户手册.md  调试与观测.md
pc-pilot/: .gitignore  README.md  agent_log.py  audio_beats.py  montage.py  prepare_inbox.py  pyproject.toml  run_all.sh  schemas.py  step0_ingest.py  step1_perceive.py  step2_segment.py  step3_montage.py  step3b_audience.py  step4_director.py  step5_editor.py  step5_render.py  step6_critic.py  step6b_compose_bgm.py  step7_render.py  step8_index.py  vlm_client.py
pc-pilot/perception/: clip_emb.py  face.py  frame_scorer.py  nsfw.py  quality.py  scene.py  yolo.py
pc-pilot/styles/: character.yaml  cinematic.yaml  collage.yaml  highlight.yaml  recap.yaml  timeline.yaml  transition.yaml
scripts/: install-debug-vivo.ps1  logcat.ps1  run-android-regression.ps1  setup-device.ps1
videos/ai-built-ondevice-ai-app/: DESIGN.md  SCRIPT.md  STORYBOARD.md  index.html  meta.json  narration.txt  package.json
videos/vlogpilot-product-intro/: DESIGN.md  SCRIPT.md  STORYBOARD.md  index.html
(+233 files in other folders)
